@@ -58,7 +58,6 @@ $(LIBRARY_NAME)_LANGUAGES = \
 $(LIBRARY_NAME)_OBJC_FILES = \
 	NSFileManager+NameForTempFile.m \
 	UKMainThreadProxy.m \
-	UKNibOwner.m \
 	UKPluginsRegistry.m \
 	UKPushbackMessenger.m \
 	UKThreadMessenger.m
@@ -82,7 +81,6 @@ $(LIBRARY_NAME)_HEADER_FILES = \
 	EtoileCompatibility.h \
 	NSFileManager+NameForTempFile.h \
 	UKMainThreadProxy.h \
-	UKNibOwner.h \
 	UKPluginsRegistry.h \
 	UKPushbackMessenger.h \
 	UKThreadMessenger.h
