@@ -1,3 +1,7 @@
+2007-02-28 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* Move UKNibOwner from EtoileFoundation (bug #8511).
+
 2007-02-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
         * Format README in reStructuedText
